--- a/Flower of the moon text game/Flower of the moon text game.vcxproj
+++ b/Flower of the moon text game/Flower of the moon text game.vcxproj
@@ -141,8 +141,7 @@
     <ClCompile Include="domain\Spell.cpp" />
     <ClCompile Include="domain\SpellManager.cpp" />
     <ClCompile Include="engine\GameEngine.cpp" />
-    <ClCompile Include="file_parser.cpp" />
-    <ClCompile Include="Flower of the moon text game.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
